--- a/app.css
+++ b/app.css
@@ -4,6 +4,8 @@ body {
 
 h1 {
     text-align: center;
+    color: #403B50;
+    font-family: Georgia, "Times New Roman", Times, serif;
 }
 
 ul {
@@ -13,10 +15,16 @@ ul {
 }
 
 li {
-    border: solid 1px black;
+    border: solid 1px #403B50;
     text-align: left;
     margin-bottom: 0.3rem;
     padding-left: 1rem;
+    transition-duration: 0.4s;
+    font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+li:hover {
+    border-color: #EDCB96;
 }
 
 .options {
@@ -39,6 +47,20 @@ li {
     line-height: 100%;
 }
 
-i {
-     color: '#605770';
+.likes>i:hover {
+    color: #771F1F;
 }
+
+.up>i:hover,
+.down>i:hover,
+.delete>i:hover {
+    color: #403B50;
+}
+
+i {
+     color:#605770;
+     width: 100%;
+     height: 100%;
+     transition-duration: 0.4s;
+}
+
