--- a/app.css
+++ b/app.css
@@ -41,7 +41,8 @@ li:hover {
 .delete,
 .up,
 .down,
-.edit {
+.editName,
+.editEra {
     height: 100%;
     text-align: center;
     width: 50px;
@@ -56,7 +57,8 @@ li:hover {
 .up>i:hover,
 .down>i:hover,
 .delete>i:hover,
-.edit>i:hover {
+.editName>i:hover,
+.editEra>i:hover, {
     color: #403B50;
 }
 
@@ -73,6 +75,25 @@ input[type=text] {
     box-shadow: none;
     transition-duration: 0.4s;
     border-right-style: none;
+    display: inline-block;
+    width: 50%;
+}
+
+.button {
+    background-color: #605770;
+}
+
+.button:hover {
+    background-color: #403B50;
+}
+
+.name {
+    width: 25%;
+    padding-right: 1rem;
+}
+
+.era {
+    width: 25%;
 }
 
 input[type=text]:focus,
