--- a/app.css
+++ b/app.css
@@ -18,7 +18,6 @@ li {
     border: solid 1px #403B50;
     text-align: left;
     margin-bottom: 0.3rem;
-    padding-left: 1rem;
     transition-duration: 0.4s;
     font-family: Georgia, "Times New Roman", Times, serif;
 }
@@ -27,14 +26,9 @@ li:hover {
     border-color: #EDCB96;
 }
 
-.options {
-    width: 10rem;
-}
-
 .input-group {
     margin-bottom: 0;
     height: 100%;
-
 }
 
 .like,
@@ -74,7 +68,7 @@ input[type=text] {
     border: 1px solid #403B50;
     box-shadow: none;
     transition-duration: 0.4s;
-    border-right-style: none;
+
     display: inline-block;
     width: 50%;
 }
@@ -87,13 +81,10 @@ input[type=text] {
     background-color: #403B50;
 }
 
-.name {
-    width: 25%;
-    padding-right: 1rem;
-}
-
+.name,
 .era {
     width: 25%;
+    padding-left: 1rem;
 }
 
 input[type=text]:focus,
@@ -101,6 +92,5 @@ input[type=text]:hover {
     background: transparent;
     border: 1px solid #EDCB96;
     box-shadow: none;
-    border-right-style: none;
 }
 
