--- a/app.css
+++ b/app.css
@@ -52,7 +52,7 @@ li:hover {
 .down>i:hover,
 .delete>i:hover,
 .editName>i:hover,
-.editEra>i:hover, {
+.editEra>i:hover {
     color: #403B50;
 }
 
