--- a/app.css
+++ b/app.css
@@ -86,6 +86,8 @@ input[type=text] {
     width: 25%;
     padding-left: 1rem;
     flex-grow: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 input[type=text]:focus,
