--- a/app.css
+++ b/app.css
@@ -64,13 +64,17 @@ i {
      transition-duration: 0.4s;
 }
 
+.showEra {
+    text-align: right;
+    padding-right: 0;
+}
+
 input[type=text] {
     background: transparent;
     border: 1px solid #403B50;
     box-shadow: none;
     transition-duration: 0.4s;
     display: inline-block;
-    width: 50%;
 }
 
 .button {
